# ForPythonCourse

ForPythonCourse/: README.md  Test.ipynb  pyproject.toml
